# buaa_complier

./: .gitignore  16061103_赵智源_设计文档.doc  README.md  back_design.txt  back_progress.txt  example.c0  example_io.txt  memo  revised_rule.txt  rule.txt  sample_rule.txt  sem_design.txt  sem_progress.txt
code/compiler/: CMakeLists.txt  back_test.c0  compiler.cbp  config.h  dag_test.c0  example.c0  fab.c0  gr_test.c0  gra_test.c0  lex_test.txt  main.cpp  modi_test.c0  param_test.c0  sem_progress.txt  sem_test.c0
code/compiler/interface/: gra_interface.cpp  modi_interface.cpp
code/compiler/log/: log.cpp  log.h
code/compiler/sample/: complex2.c0  complex_src.txt  hack.txt  sel_right.c0
code/compiler/sample/array_assign/: c0
code/compiler/sample/complex/: ans  c0
code/compiler/sample/complex2/: ans  src
code/compiler/sample/dag_multi_assign/: ans  c0
code/compiler/sample/dag_old_value/: ans  c0
code/compiler/sample/dag_test/: ans  c0
code/compiler/sample/fab/: ans
code/compiler/sample/graph_gr_alloc/: c0
code/compiler/sample/loop_test/: c0
code/compiler/sample/param_nest/: c0
code/compiler/sample/switch_multi_const/: ans  c0
code/compiler/src/: NameUtil.cpp  NameUtil.h  config.h  symbol.cpp
code/compiler/src/backend/: Backend.cpp  Backend.h  Command.cpp  Command.h  FuncBackend.cpp  FuncBackend.h  FuncBackend_tuple.cpp  GlobalRegAllocator.h  GlobalRegPool.h  Memory.h  ParamRegPool.h  Part.h  Reg.cpp  Reg.h  RegPool.h  SizeUtil.h  TempRegPool.h
code/compiler/test/: back_test.cpp  gra_test.cpp  lex_test.cpp  modi_test.cpp  sem_test.cpp
doc/: memo  (+6 more)
(+94 files in other folders)
